# technical-cv

./: .gitignore  CHANGELOG.md  CV_README.md  DEPLOYMENT.md  Makefile  PORTFOLIO_STRUCTURE.md  README.md  SECURITY_CLEANUP_REPORT.md  aes_crypto.h  aes_wrapper.c  algorithms.c  benchmark.c  config.php  credential_scanner.sh  deploy.sh  deploy_production.sh  donut-arch.js  donut.js  ftp_upload_curl.sh  generate_icons.sh  hypervisor.c  index.html  index.html.disabled  index_nuevo.html  kernel_module.c  main.js  network_scanner.c  neural-network.js  quick_upload.sh  security-styles.css  service-worker.js  sitemap.xml  stop-server.sh  styles.css  test_aes.c  test_ioctl.c  upload_curl.sh  upload_ftp.sh  utils.c  visualizations.js  (+2 more)
.git_backup_20250610_133545/: COMMIT_EDITMSG  config  index
.git_backup_20250610_133545/refs/heads/: gh-pages  main
.git_backup_20250610_133545/refs/heads/project/: bootloader  kernel-module
.git_backup_20250610_133545/refs/remotes/origin/project/: crypto-asm  network-scanner
core-projects/: README.md
core-projects/advanced-debugger/: README.md
core-projects/advanced-debugger/src/: multiarch_debugger.c
core-projects/arm-cryptography/: Makefile  README.md
core-projects/arm-cryptography/include/: arm_crypto.h
core-projects/arm-cryptography/src/: arm_crypto.c
core-projects/arm-llm-runtime/: CMakeLists.txt  README.md
core-projects/arm-llm-runtime/config/: default_config.yaml
core-projects/arm-llm-runtime/examples/: cpp_example.cpp  python_example.py
core-projects/arm-llm-runtime/scripts/: build.sh  build_android.sh
core-projects/arm-llm-runtime/src/: arm_llm_runtime.h
core-projects/arm-neural-network/: neural_net.s
core-projects/crypto-engine/src/: chacha20_poly1305.c
core-projects/ebpf-firewall/src/: xdp_firewall.c
core-projects/gpu-driver/src/: gpu_driver.c
core-projects/hypervisor/src/: hypervisor_core.c
core-projects/jit-compiler/src/: jit_engine.c
core-projects/kernel-rootkit/src/: rootkit_core.c
core-projects/memory-allocator/src/: advanced_allocator.c
core-projects/os-kernel/src/: kernel_main.c
core-projects/quantum-cryptography-qasm/: README.md
core-projects/quantum-cryptography-qasm/algorithms/: grover_cryptanalysis.qasm
core-projects/quantum-cryptography-qasm/circuits/: bb84_qkd.qasm  lattice_shor.qasm  quantum_rng.qasm
core-projects/smc-patcher/src/: smc_patcher.c
core-projects/tcp-ip-stack/: README.md
core-projects/tcp-ip-stack/src/: tcp_stack.c
core-projects/uefi-bootkit/src/: uefi_bootkit.c
crypto-engine/: crypto_engine.s
debugger/: debugger.c
deployment/: build_wasm.sh  cleanup_git_history.sh  deploy_secure.sh  secure_cleanup.sh  start-server.sh  update_github.sh
documentation/: CHANGELOG.md  CV_README.md  DEPLOYMENT.md  WEBSITE_OPTIMIZATION_REPORT.md
gpu-driver/: gpu_driver.c
jit-compiler/: jit_compiler.c
kernel-rootkit/: kernel_rootkit.c
memory-allocator/: memory_allocator.c
network-stack/: network_stack.c
os-kernel/: os_kernel.c
portfolio/: README.md
portfolio/arm-llm-runtime/: LICENSE  Makefile
portfolio/arm-llm-runtime/bindings/: python_bindings.cpp
portfolio/arm-llm-runtime/src/: arm_llm_runtime.cpp
portfolio/arm-llm-runtime/tools/: main.cpp
portfolio/arm-neural-network/: Makefile
projects/: Makefile.kernel  README_crypto.md  README_kernel.md  bootloader.asm  crypto_asm.s  kernel_module.c  network_scanner.c
projects/arm-neural-network/: README.md
smc-patcher/: smc_patcher.c
tools-utilities/: crypto_asm.s  network_scanner.h  web_vulnerability_scanner.c
uefi-bootkit/: uefi_bootkit.c
web-platform/: index.html  network-tools.js  neural-network.js  security-scanner.js  sitemap.xml  wasm-loader.js
web-platform/htdocs/: CHANGELOG.md  DEPLOYMENT.md  README.md  i18n.js  robots.txt  security-styles.css  security.txt
web-platform/web-ftp/: FILES_TO_UPLOAD.txt  manifest.json  service-worker.js  visualizations.js
website_upload/: .htaccess  index.html  vulnerability-scanner.js
